--- a/examples/tutorial/Using the py-droplets package.ipynb
+++ b/examples/tutorial/Using the py-droplets package.ipynb
@@ -625,7 +625,7 @@
     }
    ],
    "source": [
-    "tracker = droplets.DropletTracker(interval=50)\n",
+    "tracker = droplets.DropletTracker(interrupts=50)\n",
     "final = eq.solve(field, t_range=1e3, dt=0.01, tracker=['progress', tracker]);"
    ]
   },
@@ -822,7 +822,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -836,7 +836,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.10"
   },
   "toc": {
    "base_numbering": 1,
