Added pyupgrade to format code

--- a/examples/tutorial/Using the py-droplets package.ipynb
+++ b/examples/tutorial/Using the py-droplets package.ipynb
@@ -107,7 +107,7 @@
     }
    ],
    "source": [
-    "drop2 = droplets.DiffuseDroplet(position=[6, 8], radius=2, interface_width=.3)\n",
+    "drop2 = droplets.DiffuseDroplet(position=[6, 8], radius=2, interface_width=0.3)\n",
     "drop2.volume"
    ]
   },
@@ -325,7 +325,7 @@
     }
    ],
    "source": [
-    "emulsion.get_phasefield().plot(title='An emulsion');"
+    "emulsion.get_phasefield().plot(title=\"An emulsion\");"
    ]
   },
   {
@@ -351,10 +351,13 @@
     }
    ],
    "source": [
-    "data = [droplets.SphericalDroplet(position=np.random.uniform(0, 100, 2),\n",
-    "                                  radius=np.random.uniform(5, 10))\n",
-    "        for _ in range(30)]\n",
-    "    \n",
+    "data = [\n",
+    "    droplets.SphericalDroplet(\n",
+    "        position=np.random.uniform(0, 100, 2), radius=np.random.uniform(5, 10)\n",
+    "    )\n",
+    "    for _ in range(30)\n",
+    "]\n",
+    "\n",
     "emulsion = droplets.Emulsion(data)\n",
     "emulsion.remove_overlapping()\n",
     "emulsion.plot(title=f\"{len(emulsion)} droplets\");"
@@ -383,7 +386,7 @@
     }
    ],
    "source": [
-    "emulsion.get_phasefield(pde.UnitGrid([100, 100])).plot(title='An emulsion');"
+    "emulsion.get_phasefield(pde.UnitGrid([100, 100])).plot(title=\"An emulsion\");"
    ]
   },
   {
@@ -424,7 +427,7 @@
    "source": [
     "# run a numerical simulation\n",
     "grid = pde.UnitGrid([64, 64], periodic=True)\n",
-    "field = pde.ScalarField.random_uniform(grid, -1, 0)        \n",
+    "field = pde.ScalarField.random_uniform(grid, -1, 0)\n",
     "eq = pde.CahnHilliardPDE()\n",
     "\n",
     "final = eq.solve(field, t_range=1e2, dt=0.01);"
@@ -626,7 +629,7 @@
    ],
    "source": [
     "tracker = droplets.DropletTracker(interrupts=50)\n",
-    "final = eq.solve(field, t_range=1e3, dt=0.01, tracker=['progress', tracker]);"
+    "final = eq.solve(field, t_range=1e3, dt=0.01, tracker=[\"progress\", tracker]);"
    ]
   },
   {
