Update Python version requirements and workflow configurations to support Python 3.10
- Changed Python version in GitHub workflows and documentation to 3.10.
- Updated `pyproject.toml` to require Python 3.10 or higher.
- Adjusted code to utilize new features and maintain compatibility with Python 3.10.

--- a/examples/tutorial/Using the py-droplets package.ipynb
+++ b/examples/tutorial/Using the py-droplets package.ipynb
@@ -325,7 +325,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "for t, emulsion in zip(tracker.data.times, tracker.data):\n",
+    "for t, emulsion in zip(tracker.data.times, tracker.data, strict=False):\n",
     "    print(f\"t={round(t)}: {len(emulsion)} droplets\")"
    ]
   },
